use projectile source for hit effects
Vanilla runs attacker-side post-hit enchantment effects from the item stored on the damage source, such as the bow or crossbow that fired an arrow or the trident item that was thrown. The local helper instead looked at the shooter's current equipment when the projectile landed. That meant delayed projectile hits could apply unrelated current-main-hand effects after the shooter swapped items, for example Bane of Arthropods slowness from a sword to an arrow hit.

The fix adds a weapon-item post-hit path to the enchantment feature. Bow and crossbow arrows now remember their firing weapon, and thrown tridents pass their thrown trident item, so projectile hit effects are evaluated against the same source item vanilla uses while ordinary melee attacks continue to use the attacker's main hand.